# rust-compiler

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  REMOVE_OLD_API_COMPLETION.md  builtin.ll  builtin.md  check_links.py  design_overview.md  guide.md  known_issue.md  main.cpp  optimize.md  removed_features.md  skipped.md  spec.md  variant_style.md  work_log.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmd/: CMakeLists.txt  README.md  ir_pipeline.cpp  semantic_pipeline.cpp
docs/: README.md  agent-guide.md  architecture.md  component-cross-reference.md  development.md  glossary.md  language-features.md  project-overview.md
docs/agents/: agent-protocols.md  decision-frameworks.md  documentation-standards.md
docs/architecture/: architecture-guide.md  compiler-architecture.md  component-interactions.md
docs/ast/: README.md  common.md  expr.md  item.md  pattern.md  stmt.md  type.md
docs/component-overviews/: README.md  ast-overview.md  lexer-overview.md  parser-overview.md  semantic-overview.md  testing-overview.md
docs/development/: code-conventions.md  development-workflow.md
docs/lexer/: README.md  lexer.md  stream.md
docs/parser/: README.md  common.md  expr_parse.md  item_parse.md  parser.md  path_parse.md  pattern_parse.md  stmt_parse.md  type_parse.md  utils.md
docs/reference/: component-cross-reference.md  faq.md  glossary.md
docs/source/: ARCHITECTURE-OVERVIEW.md  QUICK-REFERENCE.md  README.md  constants.md
docs/test/: README.md
lib/llvmbuilder/: CMakeLists.txt  README.md
lib/llvmbuilder/tests/: CMakeLists.txt  test_builder.cpp
lib/parsecpp/: CMakeLists.txt  README.md
lib/parsecpp/include/: parsec.hpp  pratt.hpp
lib/parsecpp/src/: test_parsec.cpp  test_parsec_basic.cpp
lib/parsecpp/test/: test_parsec_basic.cpp  test_pratt.cpp  test_pratt_move_only.cpp
lib/parsecpp/tests/: test_parsec_basic.cpp  test_pratt.cpp  test_pratt_move_only.cpp
scripts/: README.md  ai_analyzer.py  builtin.c  generate_report.py  run_tests.py  test.py  test_ir_pipeline.py
scripts/prompts/: parser_verifier.md
src/: array_repeat.md  constants.hpp  control-flow.md  remove-expr-check.md  span.md  type-seperate.md  unit.md
src/ast/: README.md  ast.hpp  common.hpp  common.md  expr.hpp  expr.md  item.hpp  item.md  pattern.hpp  pattern.md  stmt.hpp  stmt.md  type.hpp  type.md
src/lexer/: README.md  lexer.hpp  lexer.md  stream.hpp  stream.md
src/lexer/tests/: CMakeLists.txt  test_lexer.cpp  test_lexer.cpp.md
src/mir/: CMakeLists.txt  DESIGN.md  EXTERNAL.md  IMPLEMENTATION.md  IMPROVEMENT.md  INIT.md  OWNER.md  README.md  REFACTOR.md  SRET.md  TEST.md  TODO.md  aggregated.md  attributes.md  copy&nrvo.md  function-refactor-implement.md  function-refactor.md  function_sig.hpp  implement.md  improvement.md  improvement2.md  improvement3.md  improvement4.md  improvement5.md  lower.cpp  lower_common.cpp  lower_const.cpp  lower_const.hpp  lower_expr.cpp  lower_internal.hpp  mir.hpp  refactor.md
src/mir/codegen/: PLAN.md  README.md  RValue.md  code.hpp  codegen.cpp  codegen.hpp  emitter.cpp  emitter.hpp  migrate.md  rvalue.cpp  rvalue.hpp  type.cpp  type.hpp
src/mir/codegen/llvmbuilder/: README.md  builder.cpp  builder.hpp  repeat.md  type_formatter.cpp  type_formatter.hpp
src/mir/lower/: README.md  fix.md  lower.cpp  lower.hpp  lower_common.cpp  lower_common.hpp  lower_const.cpp  lower_const.hpp  lower_expr.cpp  lower_internal.hpp  lower_node.cpp  lower_result.cpp  lower_result.hpp  sig_builder.cpp  sig_builder.hpp
src/mir/lower-v2/: CMakeLists.txt  lower.cpp  lower.hpp  lower_expr.cpp  lower_internal.hpp  lower_node.cpp  lower_result.cpp  lower_result.hpp
src/mir/tests/: CMakeLists.txt  test_llvmbuilder.cpp  test_mir_codegen.cpp  test_mir_codegen_switch.cpp  test_mir_emitter.cpp  test_mir_lower.cpp  test_mir_lower_v2.cpp  test_type_codegen.cpp
src/parser/: CMakeLists.txt  README.md  common.hpp  common.md  expr_parse.cpp  expr_parse.hpp  expr_parse.md  item_parse.cpp  item_parse.hpp  item_parse.md  parser.hpp  parser.md  parser_registry.cpp  parser_registry.hpp  path_parse.cpp  path_parse.hpp  path_parse.md  pattern_parse.cpp  pattern_parse.hpp  pattern_parse.md  stmt_parse.cpp  stmt_parse.hpp  stmt_parse.md  type_parse.cpp  type_parse.hpp  type_parse.md  utils.hpp  utils.md
src/parser/tests/: CMakeLists.txt  test_expr_parser.cpp  test_expr_parser.cpp.md  test_item_parser.cpp  test_pattern_parser.cpp  test_stmt_parser.cpp  test_type_parser.cpp
src/semantic/: CMakeLists.txt  QUERY-BASED.md  REMOVE_ANYTYPE.md  REVIEW.md  common.hpp  expr_info_helpers.hpp  funtion_refactor.md  struct-single-source.md  utils.hpp
src/semantic/tests/: CMakeLists.txt  test_const_type_check.cpp  test_control_flow_linking.cpp  test_exit_check.cpp  test_expr_check.cpp  test_expr_check_advanced.cpp  test_expr_check_control_flow.cpp  test_expr_check_coverage.md  test_hir_converter.cpp  test_name_resolution.cpp  test_temp_ref_desugaring.cpp  test_trait_check.cpp  test_type_compatibility.cpp  test_type_const.cpp
src/semantic/tests/helpers/: common.hpp
src/span/: CMakeLists.txt  source_manager.cpp  source_manager.hpp  span.hpp
src/tests/: catch_gtest_compat.hpp
src/type/: CMakeLists.txt  helper.hpp  helper.md  impl_table.hpp  impl_table.md  resolver.hpp  resolver.md  type.cpp  type.hpp  type.md  type_system.md
src/utils/: debug_context.hpp  error.hpp  helpers.hpp
test/: README.md
test/ir/: TEST_SUITE.md  run_ir_e2e.py
test/lexer/: test_lexer.cpp  test_lexer.cpp.md
test/llvmbuilder/: test_builder.cpp
test/mir/: test_mir_lower.cpp
test/parser/: test_expr_parser.cpp  test_expr_parser.cpp.md  test_item_parser.cpp  test_pattern_parser.cpp  test_stmt_parser.cpp  test_type_parser.cpp
test/semantic/: test_const_type_check.cpp  test_control_flow_linking.cpp  test_exit_check.cpp  test_expr_check.cpp  test_expr_check_advanced.cpp  test_expr_check_control_flow.cpp  test_hir_converter.cpp  test_name_resolution.cpp  test_scope.cpp  test_temp_ref_desugaring.cpp  test_trait_check.cpp  (+2 more)
tests/: test_lexer.cpp
(+237 files in other folders)
